Инициал. npm окружение радуги

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.7",
+        "font-awesome": "^4.7.0",
         "suggestions-jquery": "^19.2.0"
     }
 }
