--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "geoip2/geoip2": "~2.0",
         "guzzlehttp/guzzle": "^6.3",
         "huasituo/laravel-phpquery": "^1.0",
+        "intervention/image": "^2.4",
         "justbetter/laravel-pagination-with-havings": "^1.0",
         "laravel/framework": "5.6.*",
         "laravel/scout": "^4.0",
         "laravel/tinker": "^1.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "maxmind-db/reader": "~1.0",
         "phpoffice/phpspreadsheet": "^1.3",
         "sngrl/sphinxsearch": "dev-master"
