--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "maxmind-db/reader": "~1.0",
         "phpoffice/phpspreadsheet": "^1.3",
+        "predis/predis": "^1.1",
         "sngrl/sphinxsearch": "dev-master"
     },
     "require-dev": {
