Voyager Admin: Install, Migrate, Seed

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -20,7 +23,8 @@
         "maxmind-db/reader": "~1.0",
         "phpoffice/phpspreadsheet": "^1.3",
         "predis/predis": "^1.1",
-        "sngrl/sphinxsearch": "dev-master"
+        "sngrl/sphinxsearch": "dev-master",
+        "tcg/voyager": "^1.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
@@ -46,8 +50,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
@@ -68,5 +71,11 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "hooks": {
+            "type": "composer",
+            "url": "https://larapack.io"
+        }
+    }
 }
