--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.7",
         "font-awesome": "^4.7.0",
+        "gsap": "^2.1.3",
+        "jquery-ui": "^1.12.1",
+        "scrollmagic": "^2.0.6",
         "suggestions-jquery": "^19.2.0",
         "tridi": "^1.0.0"
     }
