--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.8.1",
-        "axios": "^0.18",
+        "axios": "^0.19.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "jquery": "^3.4.1",
+        "laravel-mix": "^4.0.16",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "resolve-url-loader": "2.3.1",
+        "sass": "^1.21.0",
+        "sass-loader": "7.*",
+        "vue": "^2.5.7",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.7",
