--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /node_modules
 /public/hot
 /public/storage
+/public/.htaccess
+/public/favicon.ico
+/public/*.png
 /storage/*.key
 /vendor
 /.idea
@@ -14,5 +17,3 @@ yarn-error.log
 
 /resources/views/inclusion/*
 #delete_before_clone
-/public/.htaccess
-/public/favicon.ico
