--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.5.0",
-        "laravel-mix": "^4.0.16",
+        "laravel-mix": "^5.0.9",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
-        "resolve-url-loader": "2.3.1",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.21.0",
         "sass-loader": "7.*",
         "vue": "^2.5.7",
